--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name":         "node-ffi",
-    "version":      "0.1.1",
+    "version":      "0.1.2",
     "author":       "Rick Branson",
     "description":  "A foreign function interface (FFI) for Node.js",
     "homepage":     "http://github.com/rbranson/node-ffi",
     "engines":      { "node": ">=0.2.0" },
-    "main":         "ffi.js",
+    "main":         "node-ffi.js",
     "scripts": {
         "preinstall":   "node-waf configure build",
         "preuninstall": "node-waf clean",
