--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name":         "node-ffi",
     "version":      "0.3.0",
     "author":       "Rick Branson",
+    "contributors": [
+      "Nathan Rajlich <nathan@tootallnate.net> (http://tootallnate.net)"
+    ],
     "description":  "A foreign function interface (FFI) for Node.js",
     "homepage":     "http://github.com/rbranson/node-ffi",
     "engines":      { "node": ">=0.4.0" },
