Fix: npm WARN bugs['web'] should probably be bugs['url']

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "url":          "http://github.com/rbranson/node-ffi.git"
     },
     "bugs": {
-        "mail":         "",
-        "web":          "http://github.com/rbranson/node-ffi/issues"
+        "url":          "http://github.com/rbranson/node-ffi/issues"
     }
 }
