--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
-{
-    "name":         "node-ffi",
-    "version":      "0.4.2",
-    "author":       "Rick Branson",
-    "contributors": [
-      "Nathan Rajlich <nathan@tootallnate.net> (http://tootallnate.net)"
-    ],
-    "description":  "A foreign function interface (FFI) for Node.js",
-    "homepage":     "http://github.com/rbranson/node-ffi",
-    "engines":      { "node": ">=0.4.0" },
-    "main":         "./lib/ffi",
-    "scripts": {
-        "preinstall":   "node-waf configure build",
-        "preuninstall": "node-waf clean",
-        "test":         "node test/test.js"
-    },
-    "repository": {
-        "type":         "git",
-        "url":          "http://github.com/rbranson/node-ffi.git"
-    },
-    "bugs": {
-        "url":          "http://github.com/rbranson/node-ffi/issues"
-    }
+{ "name": "node-ffi"
+, "version": "0.4.2"
+, "author": "Rick Branson"
+, "contributors": [
+    "Nathan Rajlich <nathan@tootallnate.net> (http://tootallnate.net)"
+  ]
+, "description": "A foreign function interface (FFI) for Node.js"
+, "homepage": "http://github.com/rbranson/node-ffi"
+, "engines": { "node": ">=0.4.0" }
+, "main": "./lib/ffi"
+, "scripts": {
+    "preinstall": "node-waf configure build"
+  , "test": "node test/test.js"
+  }
+, "repository": {
+    "type": "git"
+  , "url": "http://github.com/rbranson/node-ffi.git"
+  }
+, "bugs": {
+    "url": "http://github.com/rbranson/node-ffi/issues"
+  }
 }
