--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   }
 , "scripts": {
     "preinstall": "node-waf configure build"
-  , "test": "node test/test.js"
+  , "test": "node ./node_modules/mocha/bin/_mocha --reporter spec"
   }
 , "repository": {
     "type": "git"
