Remove the 'preinstall' npm script, since the wscript is gone.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     , "mocha": "*"
   }
 , "scripts": {
-    "preinstall": "node-waf configure build"
-  , "test": "node --expose-gc ./node_modules/mocha/bin/_mocha"
+    "test": "node --expose-gc ./node_modules/mocha/bin/_mocha"
   }
 , "repository": {
     "type": "git"
