Update `npm test` to use the new mocha bin syntax (to enable gc).
The old hacky invokation is no longer needed...

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
 , "main": "./lib/ffi"
 , "devDependencies": {
       "expect.js": "*"
-    , "mocha": "*"
+    , "mocha": ">= 0.10.x"
   }
 , "scripts": {
-    "test": "node --expose-gc ./node_modules/mocha/bin/_mocha"
+    "test": "mocha -gc --reporter spec"
   }
 , "repository": {
     "type": "git"
