--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name": "node-ffi"
-, "version": "0.5.1"
+, "version": "0.5.1-1"
 , "author": "Rick Branson"
 , "contributors": [
     "Nathan Rajlich <nathan@tootallnate.net> (http://tootallnate.net)"
