--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 , "main": "./lib/ffi"
 , "dependencies": {
     "bindings": "*"
+  , "ref": "*"
   }
 , "devDependencies": {
     "expect.js": "*"
