package: build the test native bindings during `npm test`

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   , "mocha": "*"
   }
 , "scripts": {
-    "test": "mocha -gc --reporter spec"
+    "test": "cd test && node-gyp rebuild && mocha -gc --reporter spec *.js"
   }
 , "repository": {
     "type": "git"
