libffi: allocate executable trampoline buffers in darwin 10 and beyond
Bug 682180 - Allocate executable trampoline buffers in darwin 10 and beyond. v3 r=khuey

https://bugzilla.mozilla.org/show_bug.cgi?id=682180

--- a/deps/libffi/configure.ac
+++ b/deps/libffi/configure.ac
@@ -351,7 +351,8 @@ case "$target" in
                  [Cannot use PROT_EXEC on this target, so, we revert to
                    alternative means])
      ;;
-     *-apple-darwin1[[10]]* | *-*-freebsd* | *-*-kfreebsd* | *-*-openbsd* | *-pc-solaris*)
+     # Darwin 10 (OSX 10.6) and beyond allocate non-executable pages
+     *-apple-darwin1* | *-*-freebsd* | *-*-kfreebsd* | *-*-openbsd* | *-pc-solaris*)
        AC_DEFINE(FFI_MMAP_EXEC_WRIT, 1,
                  [Cannot use malloc on this target, so, we revert to
                    alternative means])
