--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
     "Nathan Rajlich <nathan@tootallnate.net> (http://tootallnate.net)"
   ],
   "description": "A foreign function interface (FFI) for Node.js",
+  "keywords": [
+    "foreign",
+    "function",
+    "interface",
+    "ffi",
+    "libffi",
+    "binding",
+    "c"
+  ],
   "homepage": "http://github.com/rbranson/node-ffi",
   "engines": {
     "node": ">=0.6.0"
