Compiles against Node 0.11.13 using NAN.

--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   },
   "main": "./lib/ffi",
   "dependencies": {
-    "bindings": "*",
-    "debug": "*",
+    "bindings": "~1.2.0",
+    "debug": "~1.0.1",
     "ref": "*",
-    "ref-struct": "*"
+    "ref-struct": "*",
+    "nan": "*"
   },
   "devDependencies": {
     "mocha": "*",
