--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "debug": "2",
     "ref": "*",
     "ref-struct": "*",
-    "nan": "*"
+    "nan": "<2.0.0"
   },
   "devDependencies": {
     "mocha": "*",
