Update to "nan" v2, adds io.js v3 support
Squashed commit of the following:

commit 9418dd724e28a788b802093628f55e5e4363fc49
Author: unbornchikken <gabor.mezo@outlook.com>
Date:   Sat Aug 29 21:13:45 2015 +0200

    license extended to current year

commit 72eed311d9eabad4f1723b7201be4188c0ac8295
Author: unbornchikken <gabor.mezo@outlook.com>
Date:   Thu Aug 27 09:04:18 2015 +0200

    references fixed

commit a4b74e3237858e11527c4ee377eb897e41ed4073
Author: unbornchikken <gabor.mezo@outlook.com>
Date:   Thu Aug 6 21:49:33 2015 +0200

    done

commit 6f024fabafbe647398023f382cfe0cc2c04bbffd
Author: unbornchikken <gabor.mezo@outlook.com>
Date:   Mon Aug 3 12:26:22 2015 +0200

    whitespace fixes

commit a6d494ef299d2ab63d1c13471dc6f1a57a6d0b88
Author: unbornchikken <gabor.mezo@outlook.com>
Date:   Mon Aug 3 10:26:54 2015 +0200

    ffi_test.cc wrap pointer fixd

commit 01ea5634772058f48933e3a481457f43791a0bb5
Author: Benjamin Byholm <bbyholm@abo.fi>
Date:   Sun Aug 2 15:25:10 2015 +0300

    Fix errors

commit 99b49837a65901904c7cc8b3cfced5a41f555098
Author: unbornchikken <gabor.mezo@outlook.com>
Date:   Thu Aug 27 08:49:14 2015 +0200

    Merge master
    Fix errors
    Merge pull request #1 from kkoopa/nan2

    Fix errors
    ffi_test.cc wrap pointer fixd
    whitespace fixes
    done

commit dc0e555003e8d9b22eb47cf5a28f59692210c042
Author: unbornchikken <gabor.mezo@outlook.com>
Date:   Sat Aug 1 12:48:51 2015 +0200

    handle scope crash

commit 66f877dbef951db8d78e3204a08859bb3f456378
Author: unbornchikken <gabor.mezo@outlook.com>
Date:   Fri Jul 31 21:50:15 2015 +0200

    nan2 ok

commit 8ae22da571829aa0e38c027ec748217a96ad287c
Author: unbornchikken <gabor.mezo@outlook.com>
Date:   Thu Aug 27 09:14:17 2015 +0200

    nan2 support impl begin

Fixes #219.
Refs #221.
Closes #231.

--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   "dependencies": {
     "bindings": "~1.2.0",
     "debug": "2",
-    "ref": "*",
-    "ref-struct": "*",
-    "nan": "1"
+    "ref": "1",
+    "ref-struct": "1",
+    "nan": "2"
   },
   "devDependencies": {
     "fs-extra": "^0.23.1",
     "mocha": "*",
-    "ref-array": "*"
+    "ref-array": "1"
   },
   "scripts": {
     "test": "node-gyp rebuild --directory test && mocha -gc --reporter spec"
