travis: attempt to test "osx"

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,26 @@
+os:
+  - linux
+  - osx
 sudo: false
-
-env:
-  - CXX=g++-4.8
+language: cpp
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
-
-language: node_js
-
-node_js:
-  - "0.10"
-  - "0.12"
-  - "2"
-  - "3.2"
-  - "4.1"
+env:
+  matrix:
+    - TRAVIS_NODE_VERSION="0.10"
+    - TRAVIS_NODE_VERSION="0.12"
+    - TRAVIS_NODE_VERSION="2"
+    - TRAVIS_NODE_VERSION="3.2"
+    - TRAVIS_NODE_VERSION="4.1"
 
 install:
+  - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
+  - if [[ $TRAVIS_OS_NAME == "linux" ]]; then export CXX=g++-4.8; fi
+  - $CXX --version
   - PATH="`npm bin`:`npm bin -g`:$PATH"
   # Node 0.8 comes with a too obsolete npm
   - if [[ "`node --version`" =~ ^v0\.8\. ]]; then npm install -g npm@1.4.28 ; fi
