--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
   },
   "main": "./lib/ffi",
   "dependencies": {
+    "any-promise": "^1.1.0",
     "bindings": "~1.2.0",
     "debug": "2",
+    "nan": "2",
     "ref": "1",
-    "ref-struct": "1",
-    "nan": "2"
+    "ref-struct": "1"
   },
   "devDependencies": {
+    "bluebird": "^3.3.4",
     "fs-extra": "^0.23.1",
     "mocha": "*",
     "ref-array": "1"
