--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
     - TRAVIS_NODE_VERSION="2"
     - TRAVIS_NODE_VERSION="4.1"
     - TRAVIS_NODE_VERSION="5.1"
+    - TRAVIS_NODE_VERSION="6"
 
 install:
   - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
