--- a/package.json
+++ b/package.json
@@ -23,25 +23,25 @@
   },
   "main": "./lib/ffi",
   "dependencies": {
-    "bindings": "1.2.1",
-    "debug": "2.6.9",
+    "bindings": "1.4.0",
+    "debug": "4.1.1",
     "nan": "2.12.1",
     "ref": "1.3.5",
     "ref-struct": "1.1.0"
   },
   "devDependencies": {
-    "fs-extra": "^0.23.1",
+    "fs-extra": "7.0.1",
     "mocha": "*",
-    "ref-array": "1"
+    "ref-array": "1.2.0"
   },
   "scripts": {
     "test": "node-gyp rebuild --directory test && mocha -gc --reporter spec"
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/node-ffi/node-ffi.git"
+    "url": "http://github.com/tagkiller/node-ffi.git"
   },
   "bugs": {
-    "url": "http://github.com/node-ffi/node-ffi/issues"
+    "url": "http://github.com/tagkiller/node-ffi/issues"
   }
 }
