--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,8 @@ addons:
       - g++-4.8
 env:
   matrix:
-#    - TRAVIS_NODE_VERSION="4.1"
-#    - TRAVIS_NODE_VERSION="5.1"
-#    - TRAVIS_NODE_VERSION="6"
-#    - TRAVIS_NODE_VERSION="7"
-#    - TRAVIS_NODE_VERSION="8"
-#    - TRAVIS_NODE_VERSION="9"
+    - TRAVIS_NODE_VERSION="6"
+    - TRAVIS_NODE_VERSION="8"
     - TRAVIS_NODE_VERSION="10"
     - TRAVIS_NODE_VERSION="11"
 
