Travis CI: Test on current Node.js releases 10, 12, 14
https://github.com/nodejs/Release

FYI @zamoraignacio

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 os:
   - linux
   - osx
-sudo: false
 language: cpp
 addons:
   apt:
@@ -10,11 +9,10 @@ addons:
     packages:
       - g++-4.8
 env:
-  matrix:
-    - TRAVIS_NODE_VERSION="6"
-    - TRAVIS_NODE_VERSION="8"
+  jobs:
     - TRAVIS_NODE_VERSION="10"
-    - TRAVIS_NODE_VERSION="11"
+    - TRAVIS_NODE_VERSION="12"
+    - TRAVIS_NODE_VERSION="14"
 
 install:
   - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
