--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ platform:
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node 0.STABLE.latest
-  - ps: {Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version)}
+  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version)
   # Install latest NPM only for node.js versions until built in node-gyp adds io.js support
   # Update is required for node.js 0.8 because built in npm(node-gyp) does not know VS2013
   #- IF %nodejs_version% LSS 1 (npm install -g npm@2)
