--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,8 @@
 environment:
   # Visual Studio Version
   MSVS_VERSION: 2019
+  # Force legacy Python
+  NODE_GYP_FORCE_PYTHON=python2
   # Test against these versions of Node.js
   matrix:
     - nodejs_version: "10"
@@ -23,7 +25,7 @@ install:
   #- IF %nodejs_version% LSS 1 (npm install -g npm@2)
   #- IF %nodejs_version% LSS 1 set PATH=%APPDATA%\npm;%PATH%
   # Typical npm stuff.
-  - NODE_GYP_FORCE_PYTHON=python2 npm install --msvs_version=%MSVS_VERSION%
+  - npm install --msvs_version=%MSVS_VERSION%
 
 # Post-install test scripts.
 test_script:
