--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,6 @@
 
 # Test against these versions of Node.js.
 environment:
-  # Visual Studio Version
-  MSVS_VERSION: 2019
  # Test against these versions of Node.js
   matrix:
     - nodejs_version: "10"
@@ -16,14 +14,7 @@ platform:
 
 # Install scripts. (runs after repo cloning)
 install:
-  # Get the latest stable version of Node 0.STABLE.latest
-  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version)
-  # Install latest NPM only for node.js versions until built in node-gyp adds io.js support
-  # Update is required for node.js 0.8 because built in npm(node-gyp) does not know VS2013
-  #- IF %nodejs_version% LSS 1 (npm install -g npm@2)
-  #- IF %nodejs_version% LSS 1 set PATH=%APPDATA%\npm;%PATH%
-  # Typical npm stuff.
-  - npm install --msvs_version=%MSVS_VERSION% --python="C:\Python27"  # "C:\Python27-x64"
+  - npm install --python="C:\Python27"  # "C:\Python27-x64"
 
 # Post-install test scripts.
 test_script:
